# gwz-py

./: .gitignore  Cargo.toml  README.md  RELEASE.md  pyproject.toml  run_tests.py
.github/workflows/: package-smoke.yml  publish.yml
dev-docs/: GwsPyDesign.md  GwzPyDesign.md  GwzPyPlan-Review48-2.md  GwzPyPlan-Review48.md  GwzPyPlan-Review55-2-Resolution.md  GwzPyPlan-Review55-2.md  GwzPyPlan-Review55.md  GwzPyPlan.md  GwzPyReleaseChecklist.md
native/src/: codec.rs  error.rs  lib.rs  operations.rs  shims.rs
native/src/dispatch/: branch_stash.rs  git_mutation.rs  materialize.rs  mod.rs  read.rs
scripts/: check_protocol_drift.py  package_smoke.py  regen_protocol.py  release.py
src/: README.md
src/gwz/: __init__.py  _version.py  bridge.py  cli.py  cli_branch_stash.py  cli_local.py  cli_mutation.py  cli_read.py  cli_render.py  cli_shared.py  client.py  client_helpers.py  errors.py
src/gwz/protocol/: __init__.py  codec.py
src/tests/: native_helpers.py  test_bridge_transport.py  test_cli.py  test_cli_branch_stash.py  test_cli_local.py  test_cli_mutation.py  test_cli_parity.py  test_cli_parser.py  test_cli_read.py  test_client.py  test_codec.py  test_errors.py  test_native_branch_stash.py  test_native_bridge.py  test_native_git_mutation.py  test_native_materialize.py  test_native_operations.py  test_native_read.py  test_protocol.py
src/tests/fixtures/cli_parity/: parser_cases.json
